--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-html {
-    min-width: 200px;
-    height: 100%;
-        padding-bottom: 0px;
-}
 
-body {
+
+body,html {
     background-image: url(img/gplaypattern.png);
     height: 100%;
+ width:100%;
+
+
 
 }
 
@@ -65,6 +64,8 @@ input[type="search"] {
 #body {
     background-color: white;
     width: 800px;
+    height: 100%;
+    display: flex;
     -webkit-box-shadow: 0px 4px 12px -2px rgba(82, 82, 82, 1);
     -moz-box-shadow: 0px 4px 12px -2px rgba(82, 82, 82, 1);
     box-shadow: 0px 4px 12px -2px rgba(82, 82, 82, 1);
@@ -81,7 +82,11 @@ input[type="search"] {
 }
 
 footer {
-    display: inline-block;
+
     background-color: #454646;    
-    height: 100%;
+    color:aquamarine;
+    height: 100px;
+    padding-top: -10px;
+    
+
 }
